--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "~typeface-roboto";
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
